# cafe_agentic_chatbot

./: README.md  main.py  pyproject.toml  requirements.txt
mcp_client/: constants.py  main.py  settings.py
mcp_client/src/agents/: agent.py
mcp_client/src/models/: chat_model.py
mcp_client/src/routers/: router.py
mcp_client/src/services/: chat_service.py
mcp_client/src/utils/: custom_app_exception.py
mcp_server/: main.py  settings.py
mcp_server/src/migrations/: create_tables.py
mcp_server/src/prompts/: mcp_prompts.py
mcp_server/src/repositories/: database.py  mcp_repository.py
mcp_server/src/repositories/schemas/: mcp_schema.py
mcp_server/src/resources/: mcp_resource.py
mcp_server/src/routers/: mcp_router.py
mcp_server/src/tools/: mcp_tool.py
