[project]
name = "bean-and-brew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
    "langchain>=1.2.12",
    "langchain-aws>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.1.2",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary,pool]>=3.3.3",
]
